change web size

--- a/css/ourWork.css
+++ b/css/ourWork.css
@@ -6,7 +6,7 @@
   background-size: cover;
   width: 100%;
   margin: 0;
-  height: 800px;
+  height: 100vh;
 }
 
 .our-work-title {
@@ -48,7 +48,7 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  margin-top: 20px;
+  margin-top: 150px;
   padding: 0% 5% 0% 5%;
 }
 
