--- a/css/contactUs.css
+++ b/css/contactUs.css
@@ -9,18 +9,18 @@ body {
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 635px;
+  height: 100vh;
 }
 
 .contactUs-content {
   height: auto;
-  padding: 5% 0% 0% 5%;
-  margin: 0% 0%;
+  padding: 25px 0% 0% 100px;
 }
 
 .contactUs-title {
   font-size: 4vw;
   text-shadow: -5px 2px #000000;
+  padding: 5% 0% 0% 5%;
   color: #e1c5a0;
 }
 
@@ -30,26 +30,21 @@ body {
 
 .contactUs-text {
   color: #e1c5a0;
-  font-size: 3vw;
+  font-size: 2vw;
   margin: 60px 0px;
   text-shadow: -0.1em 0em #000000;
-  /* width: 500px;
-  font-size: 2vw;
-  color: #e1c5a0;
-  margin: 5% 0% 0% 5%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
 }
 span.email {
   color: #e5e5e5;
-  font-size: 3vw;
+  font-size: 2vw;
 }
 
 img {
   float: left;
-  width: 4%;
+  width: 2%;
   border: 1px transparent;
   border-radius: 4px;
-  padding: 0px 20px 0px 0px;
+  padding: 6px 20px 0px 0px;
 }
 
 a {
