--- a/css/home.css
+++ b/css/home.css
@@ -12,7 +12,7 @@ body {
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 636px;
+  height: 100vh;
 }
 
 .navbar {
@@ -79,7 +79,7 @@ body {
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: auto;
+  height: 100vh;
 }
 
 .about-content {
@@ -102,14 +102,14 @@ body {
   color: #e5e5e5;
   text-shadow: -1px 2px #000000;
   height: auto;
-  margin-top: 35px;
+  margin-top: 20vh;
   padding: 0% 30% 0% 0%;
 }
 
 .vision-mission-flex-container {
   display: flex;
   justify-content: left;
-  margin: 5% 0% 5% 5%;
+  margin: 10% 0% 5% 5%;
 }
 
 .vision-mission-box {
