--- a/css/testimony.css
+++ b/css/testimony.css
@@ -1,6 +1,6 @@
 #testimony-container {
   /* padding: 37px 50px; */
-  height: 700px;
+  height: 100vh;
   width: 100%;
   background-image: linear-gradient(#79797a, #525253);
 }
@@ -25,8 +25,8 @@
   display: flex;
   align-items: center;
   flex-direction: row;
-  margin-top: 10px;
-  padding: 0% 0% 0% 5%;
+  margin-top: 100px;
+  padding: 0% 5% 0% 5%;
 }
 
 .testimony-content > .profile-pic {
