--- a/css/vision.css
+++ b/css/vision.css
@@ -4,7 +4,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 700px;
+  height: 100vh;
   width: 100%;
 }
 
