change height value

--- a/css/ourWork.css
+++ b/css/ourWork.css
@@ -6,12 +6,11 @@
   background-size: cover;
   width: 100%;
   margin: 0;
-  height: 100vh;
 }
 
 .our-work-title {
   font-size: 4vw;
-  text-shadow: -5px 2px #000000;
+  text-shadow: -3px 0px #000000;
   color: #e5e5e5;
   padding: 5% 0% 0% 5%;
 }
@@ -25,7 +24,7 @@
   color: #e5e5e5;
   text-shadow: -1px 2px #000000;
   height: auto;
-  margin-top: 20px;
+  margin-bottom: 7%;
   padding: 0% 0% 0% 5%;
 }
 
@@ -48,7 +47,7 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  margin-top: 150px;
+  margin: 5% 0%;
   padding: 0% 5% 0% 5%;
 }
 
