--- a/css/contactUs.css
+++ b/css/contactUs.css
@@ -9,7 +9,6 @@ body {
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 100vh;
 }
 
 .contactUs-content {
@@ -19,7 +18,7 @@ body {
 
 .contactUs-title {
   font-size: 4vw;
-  text-shadow: -5px 2px #000000;
+  text-shadow: -3px 0px #000000;
   padding: 5% 0% 0% 5%;
   color: #e1c5a0;
 }
@@ -31,7 +30,7 @@ body {
 .contactUs-text {
   color: #e1c5a0;
   font-size: 2vw;
-  margin: 60px 0px;
+  margin: 5% 0%;
   text-shadow: -0.1em 0em #000000;
 }
 span.email {
@@ -56,12 +55,18 @@ a {
     height: auto;
   }
 
+  .contactUs-content {
+    height: auto;
+    padding: 5% 0% 0% 5%;
+  }
+
   .contactUs-title {
     font-size: 3em;
   }
 
   img {
     width: 1.5em;
+    padding: 0% 5% 0% 0%;
   }
 
   span.email {
@@ -70,5 +75,6 @@ a {
 
   .contactUs-text {
     font-size: 1.5em;
+    margin: 5% 0%;
   }
 }
