--- a/css/home.css
+++ b/css/home.css
@@ -12,7 +12,7 @@ body {
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  height: auto;
 }
 
 .navbar {
@@ -59,7 +59,7 @@ body {
 
 .home-content {
   height: 90%;
-  margin: 10% 0% 0% 5%;
+  margin: 10% 0% 30% 5%;
 }
 
 .home-title {
@@ -79,7 +79,7 @@ body {
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  height: auto;
 }
 
 .about-content {
@@ -89,7 +89,7 @@ body {
 
 .head-title {
   font-size: 4vw;
-  text-shadow: -5px 2px #000000;
+  text-shadow: -3px 0px #000000;
   color: #e1c5a0;
 }
 
