--- a/css/order.css
+++ b/css/order.css
@@ -5,7 +5,7 @@
 
 .title {
   font-size: 4vw;
-  text-shadow: -5px 2px #000000;
+  text-shadow: -3px 0px #000000;
   color: #e1c5a0;
   padding: 5% 0% 0% 5%;
 }
@@ -17,7 +17,6 @@
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 100vh;
 }
 
 footer {
@@ -69,10 +68,7 @@ footer {
   font-size: 24px;
   padding: 10px 24px;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 20px;
-  margin: 20px auto;
+  margin: 5% auto 15%;
   color: #e5e5e5;
   background: rgb(92, 91, 91);
   border: solid white 1px;
