--- a/css/testimony.css
+++ b/css/testimony.css
@@ -1,6 +1,5 @@
 #testimony-container {
-  /* padding: 37px 50px; */
-  height: 100vh;
+  height: auto;
   width: 100%;
   background-image: linear-gradient(#79797a, #525253);
 }
@@ -16,7 +15,7 @@
 
 .testimony-title {
   font-size: 4vw;
-  text-shadow: -5px 2px #000000;
+  text-shadow: -3px 0px #000000;
   padding: 5% 0% 0% 5%;
   color: #e1c5a0;
 }
@@ -25,13 +24,12 @@
   display: flex;
   align-items: center;
   flex-direction: row;
-  margin-top: 100px;
-  padding: 0% 5% 0% 5%;
+  padding: 5%;
 }
 
 .testimony-content > .profile-pic {
+  width: 15%;
   padding: 1%;
-  margin: 0% 2% 1% 0%;
   background-color: #c4c4c4;
 }
 
@@ -45,8 +43,8 @@
 
 .testimony-content > .testimony-words {
   color: #e5e5e5;
-  font-size: 1.55em;
-  margin-top: 17px;
+  padding: 0% 0% 0% 2.5%;
+  font-size: 1.75vw;
   text-shadow: -0.1em 0em #000000;
 }
 
@@ -60,27 +58,41 @@
   }
 
   .testimony-title {
-    font-size: 3.5em;
+    font-size: 3em;
     text-shadow: -2px 2px #000000;
+  }
+
+  .testimony-content > .profile-pic {
+    width: 40%;
+    padding: 1%;
+    background-color: #c4c4c4;
+  }
+  
+  .testimony-content > .profile-pic > .img {
+    padding: 0px 20px 0px 10px;
   }
 
   .testimony-content {
     flex-direction: column;
+    text-align: left;
     margin-top: 10%;
     padding-bottom: 10%;
   }
 
   .testimony-content > .profile-pic {
+    float: left;
     padding: 1%;
     margin: 0;
     background-color: #c4c4c4;
   }
 
-  .testimony-content > .testimony-words > .words{
-    margin-top: 30px;
-    padding-right: 25px;
+  .testimony-content > .testimony-words {
+    padding: 5% 0% 0% 2.5%;
+    font-size: 1.5em;
   }
-
+  .testimony-content > .testimony-words > .words {
+    padding: 5% 0% 0% 0%;
+  }
   .testimony-container > hr {
     width: 100%;
   }
